@@ -1,5 +1,6 @@
 xine-lib (1.1.17) 2009-??-??
   * Add support for Matroska SIMPLEBLOCK.
+  * Add support for sndio (OpenBSD sound API).
 
 xine-lib (1.1.16.3) 2009-04-03
   * Security fixes:
